--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <button id="btn-reset">Play</button>
           <button id="btn-mute" hidden>Mute</button>
           <button id="btn-pause" hidden>Pause</button>
-          <button id="btn-about">About</button>
+          <!-- <button id="btn-about">About</button> -->
           <button id="btn-up" hidden>↑</button>
           <div class="btn-fake"></div>
           <button id="btn-left" hidden>←</button>
